[package]
name = "young_ethereum"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.5.0", features = ["serde", "rlp"] }
alloy-rlp = { version = "0.3.3", features = ["derive"] }
anyhow = "1.0.75"
cita_trie = "5.0.1"
clap = { version = "4.4.8", features = ["derive"] }
ethers = "2.0.11"
hasher = { version = "0.1.4", features = ["hash-keccak"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokyo = "1.0.0"
